bin_PROGRAMS = tucube
tucube_SOURCES = tucube.c tucube_help.h tucube_help.c tucube_options.h tucube_options.c tucube_master.h tucube_master.c tucube_worker.h tucube_worker.c tucube_module.h tucube_cldata.h
tucube_CFLAGS = -Wall -std=gnu11
tucube_LDADD = -ldl -lpthread
pkginclude_HEADERS = tucube_module.h tucube_cldata.h

