bin_PROGRAMS = tucube
tucube_SOURCES = tucube.c tucube_Help.h tucube_Help.c tucube_Options.h tucube_Options.c tucube_Master.h tucube_Master.c tucube_Worker.h tucube_Worker.c tucube_Module.h tucube_ClData.h
tucube_CFLAGS = -Wall -std=gnu11
tucube_LDADD = -ldl -lpthread
pkginclude_HEADERS = tucube_Module.h tucube_ClData.h

