bin_PROGRAMS = tucube
tucube_SOURCES = tucube.c tucube_Help.h tucube_Help.c tucube_Options.h tucube_Options.c tucube_Core.h tucube_Core.c tucube_Module.h tucube_ClData.h tucube_IBase.h tucube_ITlService.h tucube_ICLocal.h tucube_IClService.h
tucube_CFLAGS = -Wall -std=gnu11 -g
tucube_LDADD = -ldl -lpthread -ljansson
pkginclude_HEADERS = tucube_Module.h tucube_ClData.h tucube_IBase.h tucube_ITlService.h tucube_ICLocal.h tucube_IClService.h tucube_Generic.h tucube_IO.h
