file(GLOB test_srcs RELATIVE ${PROJECT_SOURCE_DIR}/test *.c)
foreach(test_src ${test_srcs})
  get_filename_component(test_name ${test_src} NAME_WE)
  add_executable(${test_name} "${test_name}.c" ${PROJECT_SOURCE_DIR}/src/vinbero_Options.c)
  target_link_libraries(${test_name} vinbero_core vinbero_com cmocka "-Wl,--wrap,vinbero_com_Log_raw -Wl,--wrap,vinbero_com_Log_init -Wl,-wrap,vinbero_Help_print")
  add_test(NAME ${test_name} COMMAND ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
endforeach()
